tests/snapshots/run_wpt_conformance__onnx_neg_float32_negative_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "neg.https.any.js",
    "neg float32 negative 0D scalar",
    "onnx",
    "PASS",
)
