tests/snapshots/run_wpt_conformance__onnx_neg_int64_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "neg.https.any.js",
    "neg int64 4D tensor",
    "onnx",
    "PASS",
)
